# MLMC_optimization

./: .gitignore  Makefile  README.md  pyproject.toml
Code/Modern/optimization/: global_annealing.py
Data/Alpha/Couplings/: couplings_L6_R1_seed1736329224.txt
Data/Alpha/gurobi_logs/: log_10016117.txt  log_10289415.txt  log_10303962.txt  log_10492586.txt  log_10617787.txt  log_10680741.txt  log_10752963.txt  log_10759243.txt  log_10785990.txt  log_1086364.txt  log_10873220.txt  log_11037872.txt  log_11146941.txt  log_11182766.txt  log_11251697.txt  log_11371769.txt  log_11402525.txt  log_11412292.txt  log_11503114.txt  log_1153328.txt  log_11534681.txt  log_11605451.txt  log_11679033.txt  log_11777311.txt  log_11802495.txt  log_11915411.txt  log_11960737.txt  log_12088959.txt  log_12238274.txt  log_12476934.txt  log_1251908.txt  log_12520071.txt  log_12531925.txt  log_12600313.txt  log_12876033.txt  log_12948253.txt  log_13046662.txt  log_13183385.txt  log_13232651.txt  log_13392517.txt  (+129 more)
Data/Alpha/gurobi_logs/gurobi_logs/: log_1010826.txt  log_1051560.txt  log_110046.txt  log_1430748.txt  log_1575578.txt  log_1631660.txt  (+24 more)
Reproduction/: README.md
Reproduction/code/: benchmark_3d_ea.py  benchmark_pqqa_polish.py  generate_coupling.py  plot_pqqa_winner.py  plot_success_vs_time.py  polish_kernels.py  run_sweep.py  test_mc_polish_correctness.py
Reproduction/figures/: pqqa_vs_ga_pareto_L10_hard.stats.csv  success_vs_time_L10_easy.stats.csv  success_vs_time_L10_hard.stats.csv
Reproduction/fresh_runs/: sweep_L10_seed1736329224.csv  sweep_L10_seed310411727.csv  sweep_L6_seed1736329224.csv
Reproduction/fresh_runs/winning/: qqa_winner_G1.csv  qqa_winner_G1_rerun.csv  qqa_winner_X1_n50.csv
Reproduction/scripts/: qqa_winner_rerun.sbatch  qqa_winner_run.sbatch  sweep_L10.sbatch  sweep_L10_hard.sbatch  sweep_L6.sbatch  verify_and_bench.sbatch
Reproduction/speedups/: README.md  bench.py  kernels.py  verify.py
scripts/: run_global_annealing.sbatch  run_population_annealing.sbatch  run_simulated_annealing.sbatch  smoketest.sbatch
